--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "node-sass": "^4.5.3",
     "patchit": "git+https://github.com/fiberjs/PatchIt.git",
     "sass-loader": "^6.0.6",
-    "uglifyjs-webpack-plugin": "^1.0.0-beta.3",
+    "uglifyjs-webpack-plugin": "^1.0.1",
     "webpack": "^3.4.1"
   },
   "devDependencies": {
